coolprop-sys/CoolPropLib.h

EXPORT_CODE void CONVENTION AbstractState_update_and_common_out(
    const long handle, const long input_pair, const double *value1, const double *value2,
    const long length, double *T, double *p, double *rhomolar, double *hmolar, double *smolar,
    long *errcode, char *message_buffer, const long buffer_length);
EXPORT_CODE void CONVENTION AbstractState_update_and_1_out(const long handle, const long input_pair,
                                                           const double *value1,
                                                           const double *value2, const long length,
                                                           const long output, double *out,
                                                           long *errcode, char *message_buffer,
                                                           const long buffer_length);
EXPORT_CODE void CONVENTION AbstractState_update_and_5_out(
    const long handle, const long input_pair, const double *value1, const double *value2,
    const long length, long *outputs, double *out1, double *out2, double *out3, double *out4,
    double *out5, long *errcode, char *message_buffer, const long buffer_length);
EXPORT_CODE void CONVENTION AbstractState_set_binary_interaction_double(
    const long handle, const long i, const long j, const char *parameter, const double value,
    long *errcode, char *message_buffer, const long buffer_length);
EXPORT_CODE void CONVENTION AbstractState_set_cubic_alpha_C(const long handle, const long i,
                                                            const char *parameter, const double c1,
                                                            const double c2, const double c3,
                                                            long *errcode, char *message_buffer,
                                                            const long buffer_length);
EXPORT_CODE void CONVENTION AbstractState_set_fluid_parameter_double(
    const long handle, const long i, const char *parameter, const double value, long *errcode,
    char *message_buffer, const long buffer_length);
EXPORT_CODE void CONVENTION AbstractState_build_phase_envelope(const long handle, const char *level,
                                                               long *errcode, char *message_buffer,
                                                               const long buffer_length);
EXPORT_CODE void CONVENTION AbstractState_get_phase_envelope_data(
    const long handle, const long length, double *T, double *p, double *rhomolar_vap,
    double *rhomolar_liq, double *x, double *y, long *errcode, char *message_buffer,
    const long buffer_length);
EXPORT_CODE void CONVENTION AbstractState_get_phase_envelope_data_checkedMemory(
    const long handle, const long length, const long maxComponents, double *T, double *p,
    double *rhomolar_vap, double *rhomolar_liq, double *x, double *y, long *actual_length,
    long *actual_components, long *errcode, char *message_buffer, const long buffer_length);
EXPORT_CODE void CONVENTION AbstractState_build_spinodal(const long handle, long *errcode,
                                                         char *message_buffer,
                                                         const long buffer_length);
EXPORT_CODE void CONVENTION AbstractState_get_spinodal_data(const long handle, const long length,
                                                            double *tau, double *delta, double *M1,
                                                            long *errcode, char *message_buffer,
                                                            const long buffer_length);
EXPORT_CODE void CONVENTION AbstractState_all_critical_points(const long handle, const long length,
                                                              double *T, double *p,
                                                              double *rhomolar, long *stable,
                                                              long *errcode, char *message_buffer,
                                                              const long buffer_length);
EXPORT_CODE double CONVENTION AbstractState_keyed_output_satState(const long handle,
                                                                  const char *saturated_state,
                                                                  const long param, long *errcode,
                                                                  char *message_buffer,
                                                                  const long buffer_length);
EXPORT_CODE void CONVENTION AbstractState_backend_name(const long handle, char *backend,
                                                       long *errcode, char *message_buffer,
                                                       const long buffer_length);
EXPORT_CODE void CONVENTION AbstractState_fluid_param_string(const long handle, const char *param,
                                                             char *return_buffer,
                                                             const long return_buffer_length,
                                                             long *errcode, char *message_buffer,
                                                             const long buffer_length);
EXPORT_CODE int CONVENTION AbstractState_phase(const long handle, long *errcode,
                                               char *message_buffer, const long buffer_length);
EXPORT_CODE double CONVENTION AbstractState_saturated_liquid_keyed_output(const long handle,
                                                                          const long param,
                                                                          long *errcode,
                                                                          char *message_buffer,
                                                                          const long buffer_length);
EXPORT_CODE double CONVENTION AbstractState_saturated_vapor_keyed_output(const long handle,
                                                                         const long param,
                                                                         long *errcode,
                                                                         char *message_buffer,
                                                                         const long buffer_length);
EXPORT_CODE void CONVENTION add_fluids_as_JSON(const char *backend, const char *fluidstring,
                                               long *errcode, char *message_buffer,
                                               const long buffer_length);
EXPORT_CODE int CONVENTION C_is_valid_fluid_string(const char *fluidName);
EXPORT_CODE int CONVENTION C_extract_backend(const char *fluid_string, char *backend,
                                             const long backend_length, char *fluid,
                                             const long fluid_length);