coolprop-sys/src/bindings_generated_static.rs

unsafe extern "C" {
    pub fn AbstractState_update_and_common_out(
        handle: ::core::ffi::c_long,
        input_pair: ::core::ffi::c_long,
        value1: *const f64,
        value2: *const f64,
        length: ::core::ffi::c_long,
        T: *mut f64,
        p: *mut f64,
        rhomolar: *mut f64,
        hmolar: *mut f64,
        smolar: *mut f64,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    );
}
unsafe extern "C" {
    pub fn AbstractState_update_and_1_out(
        handle: ::core::ffi::c_long,
        input_pair: ::core::ffi::c_long,
        value1: *const f64,
        value2: *const f64,
        length: ::core::ffi::c_long,
        output: ::core::ffi::c_long,
        out: *mut f64,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    );
}
unsafe extern "C" {
    pub fn AbstractState_update_and_5_out(
        handle: ::core::ffi::c_long,
        input_pair: ::core::ffi::c_long,
        value1: *const f64,
        value2: *const f64,
        length: ::core::ffi::c_long,
        outputs: *mut ::core::ffi::c_long,
        out1: *mut f64,
        out2: *mut f64,
        out3: *mut f64,
        out4: *mut f64,
        out5: *mut f64,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    );
}
unsafe extern "C" {
    pub fn AbstractState_set_binary_interaction_double(
        handle: ::core::ffi::c_long,
        i: ::core::ffi::c_long,
        j: ::core::ffi::c_long,
        parameter: *const ::core::ffi::c_char,
        value: f64,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    );
}
unsafe extern "C" {
    pub fn AbstractState_set_cubic_alpha_C(
        handle: ::core::ffi::c_long,
        i: ::core::ffi::c_long,
        parameter: *const ::core::ffi::c_char,
        c1: f64,
        c2: f64,
        c3: f64,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    );
}
unsafe extern "C" {
    pub fn AbstractState_set_fluid_parameter_double(
        handle: ::core::ffi::c_long,
        i: ::core::ffi::c_long,
        parameter: *const ::core::ffi::c_char,
        value: f64,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    );
}
unsafe extern "C" {
    pub fn AbstractState_build_phase_envelope(
        handle: ::core::ffi::c_long,
        level: *const ::core::ffi::c_char,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    );
}
unsafe extern "C" {
    pub fn AbstractState_get_phase_envelope_data(
        handle: ::core::ffi::c_long,
        length: ::core::ffi::c_long,
        T: *mut f64,
        p: *mut f64,
        rhomolar_vap: *mut f64,
        rhomolar_liq: *mut f64,
        x: *mut f64,
        y: *mut f64,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    );
}
unsafe extern "C" {
    pub fn AbstractState_get_phase_envelope_data_checkedMemory(
        handle: ::core::ffi::c_long,
        length: ::core::ffi::c_long,
        maxComponents: ::core::ffi::c_long,
        T: *mut f64,
        p: *mut f64,
        rhomolar_vap: *mut f64,
        rhomolar_liq: *mut f64,
        x: *mut f64,
        y: *mut f64,
        actual_length: *mut ::core::ffi::c_long,
        actual_components: *mut ::core::ffi::c_long,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    );
}
unsafe extern "C" {
    pub fn AbstractState_build_spinodal(
        handle: ::core::ffi::c_long,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    );
}
unsafe extern "C" {
    pub fn AbstractState_get_spinodal_data(
        handle: ::core::ffi::c_long,
        length: ::core::ffi::c_long,
        tau: *mut f64,
        delta: *mut f64,
        M1: *mut f64,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    );
}
unsafe extern "C" {
    pub fn AbstractState_all_critical_points(
        handle: ::core::ffi::c_long,
        length: ::core::ffi::c_long,
        T: *mut f64,
        p: *mut f64,
        rhomolar: *mut f64,
        stable: *mut ::core::ffi::c_long,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    );
}
unsafe extern "C" {
    pub fn AbstractState_keyed_output_satState(
        handle: ::core::ffi::c_long,
        saturated_state: *const ::core::ffi::c_char,
        param: ::core::ffi::c_long,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    ) -> f64;
}
unsafe extern "C" {
    pub fn AbstractState_backend_name(
        handle: ::core::ffi::c_long,
        backend: *mut ::core::ffi::c_char,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    );
}
unsafe extern "C" {
    pub fn AbstractState_fluid_param_string(
        handle: ::core::ffi::c_long,
        param: *const ::core::ffi::c_char,
        return_buffer: *mut ::core::ffi::c_char,
        return_buffer_length: ::core::ffi::c_long,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    );
}
unsafe extern "C" {
    pub fn AbstractState_phase(
        handle: ::core::ffi::c_long,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn AbstractState_saturated_liquid_keyed_output(
        handle: ::core::ffi::c_long,
        param: ::core::ffi::c_long,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    ) -> f64;
}
unsafe extern "C" {
    pub fn AbstractState_saturated_vapor_keyed_output(
        handle: ::core::ffi::c_long,
        param: ::core::ffi::c_long,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    ) -> f64;
}
unsafe extern "C" {
    pub fn add_fluids_as_JSON(
        backend: *const ::core::ffi::c_char,
        fluidstring: *const ::core::ffi::c_char,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    );
}
unsafe extern "C" {
    pub fn C_is_valid_fluid_string(fluidName: *const ::core::ffi::c_char) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn C_extract_backend(
        fluid_string: *const ::core::ffi::c_char,
        backend: *mut ::core::ffi::c_char,
        backend_length: ::core::ffi::c_long,
        fluid: *mut ::core::ffi::c_char,
        fluid_length: ::core::ffi::c_long,
    ) -> ::core::ffi::c_int;
}
